--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,7 @@ body {
       rgba(211, 71, 61, 0.98), 
       rgba(211, 71, 61, 0.98)
     ),
-    url(../img/body_background.png);
-  background-size: 100%;
-
+    url(../img/body_background.png) no-repeat 100% 100%;
 }
 
 .footer {
