--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
       rgba(211, 71, 61, 0.98), 
       rgba(211, 71, 61, 0.98)
     ),
-    url(../img/body_background.png) no-repeat 100% 100%;
+    url('../img/body_background.png') no-repeat 100% 100%;
 }
 
 .footer {
@@ -77,7 +77,7 @@ a.phoodeez-brand p{
 .dropdown-cart{
   background-color: #e7e7e7;
   border:none !important;
-  border-radius: 0px !important;
+  border-radius: 0 !important;
   min-width: 360px;
   padding-top:20px;
   padding-bottom: 20px; 
@@ -127,44 +127,39 @@ h1.phoodeez_funnel{
 
 .option-thumb{
   height: 200px;
-  margin-bottom: 8px; 
+  margin-bottom: 8px;
 }
 
 .option_meeting{
-  background: url(../img/cat_pics/meeting1.svg) no-repeat;
-  background-position: center;
+  background: url('../img/cat_pics/meeting1.svg') no-repeat center;
   background-size:90% 90%;
   -o-background-size: 90% 90%;
   -webkit-background-size: 90% 90%;
 }
 
 .option_office{
-  background: url(../img/cat_pics/man332.svg) no-repeat;
-  background-position: center;
+  background: url('../img/cat_pics/man332.svg') no-repeat center;
   background-size:90% 90%;
   -o-background-size: 90% 90%;
   -webkit-background-size: 90% 90%;
 }
 
 .option_class{
-  background: url(../img/cat_pics/class6.svg) no-repeat;
-  background-position: center;
+  background: url('../img/cat_pics/class6.svg') no-repeat center;
   background-size:90% 90%;
   -o-background-size: 90% 90%;
   -webkit-background-size: 90% 90%;
 }
 
 .option_party{
-  background: url(../img/cat_pics/man204.svg) no-repeat;
-  background-position: center;
+  background: url('../img/cat_pics/man204.svg') no-repeat center;
   background-size:90% 90%;
   -o-background-size: 90% 90%;
   -webkit-background-size: 90% 90%;
 }
 
 .option_wildcard{
-  background: url(../img/cat_pics/easteregg.svg) no-repeat;
-  background-position: center;
+  background: url('../img/cat_pics/easteregg.svg') no-repeat center;
   background-size:90% 90%;
   -o-background-size: 90% 90%;
   -webkit-background-size: 90% 90%;
