--- a/css/style.css
+++ b/css/style.css
@@ -174,10 +174,66 @@ h1.phoodeez_funnel{
   border-color: #a43a32 !important;
 }
 
- /* Small Devices, Tablets */
-    @media only screen and (max-width : 768px) {
-        .phoodeez-brand p{
-          display: none;
-        }
-    }
 
+
+/*Phoodeez styled modal
+-------------------------------------------------- */
+.modal-content{
+  border-radius: 0 !important;
+  border-top: 3px solid #d0483e;
+  box-shadow: none !important;
+}
+
+.modal-backdrop {
+  bottom: 0;
+}
+
+.login-title{
+  text-align: center;
+}
+
+.phoodeez-login{
+  width:100%;
+}
+
+.login-modal-body{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.login_span_cont{
+  margin: 20px 0 -10px 0;
+  text-align: center;
+}
+
+.login_span{
+  width: 100%;
+  font-weight: bold;
+  color: #fff;
+  background-color: #cccccc;
+  padding-right: 3px;
+  padding-left: 3px;
+
+}
+
+.login_seperator{
+  margin: 0px 0 25px 0;
+}
+
+/*Responsive Layouts
+-------------------------------------------------- */
+
+/* Small Devices, Tablets */
+  @media only screen and (max-width : 768px) {
+      .phoodeez-brand p{
+        display: none;
+      }
+  }
+
+  @media(min-width:992px){
+
+  .login .modal-dialog {
+   width: 450px;
+  }
+
+  }
