--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,22 @@ p.package-options-desc{
   text-align: center;
 }
 
+.sideOptions h4{
+  font-weight: 400;
+}
+
+.sideOptions .radio{
+  margin: 0;
+
+}
+
+.sideOptions .radio input{
+}
+
+.sideOptions_choices{
+  padding-left: 20px !important;
+}
+
 /*Single Page
 -------------------------------------------------- */
 .backlink{
