--- a/app/partials/modals.html
+++ b/app/partials/modals.html
@@ -11,8 +11,8 @@
     </div>
     <div class="modal-body login-modal-body">
 
-
      <form name="loginForm" ng-show="!signupbox" ng-submit="login(credentials)" novalidate>
+     	<div class="login_modal_error" ng-bind-html="loginError" ng-show="loginError">{{loginError}}</div>
 		  <div class="form-group">
 		    <label for="loginUsername">Email address</label>
 		    <input type="text" ng-model="credentials.username" class="form-control" id="loginUsername" placeholder="Enter email">
@@ -26,12 +26,15 @@
 		      <input type="checkbox"> Remember me
 		    </label>
 		  </div>
-		  <button type="submit" class="btn btn-primary phoodeez-login">Sign in</button>
+		  <button type="submit" class="btn btn-primary phoodeez-login">
+		  	<img class="login-loader" ng-src="{{rootPath}}img/gear.svg" ng-show="loginLoad">
+		  Sign in 
+		  </button>
 	</form>
 
 
 	<form name="signupForm" ng-show="signupbox" ng-submit="signUp(signup)" novalidate>
-		<div>{{signmsg}}</div>
+		<div class="login_modal_error" ng-show="signupError">{{signupError}}</div>
 		<label for="firstName">Name</label>
 		<div class="form-inline create_name_form">
 				<div class="form-group">
@@ -50,7 +53,10 @@
 	    <input type="password" class="form-control" ng-model="signup.password1" id="createPw" placeholder="Password">
 	    <input type="password" class="form-control create_pw2_form" ng-model="signup.password2" placeholder="Confirm Password">
 	  	</div>
-	  	<button type="submit" class="btn phoodeez-login btn-primary" ng-show="signupbox">Create Account</button> 
+	  	<button type="submit" class="btn phoodeez-login btn-primary" ng-show="signupbox">
+	  		<img class="login-loader" ng-src="{{rootPath}}img/gear.svg" ng-show="loginLoad">	
+	  		Create Account
+	  	</button> 
 	</form>
 
 
