--- a/app/partials/single.html
+++ b/app/partials/single.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="single_package_container">  
-                            <img src="img/items/{{catInfo.subpackages[singleInfo].img}}">
+                            <img src="{{rootPath}}img/items/{{catInfo.subpackages[singleInfo].img}}">
                         </div><!-- .single_package_container -->
                     </div>
                     <div class="col-sm-7">
@@ -25,7 +25,7 @@
                 <h3>Add Package Options</h3>
     			<ul ng-repeat="package in catInfo.subpackages[singleInfo].Options"> 
     				<li>
-                        <a href="#/cat/{{catInfo.info.url}}/{{singleInfo}}" ng-click="openOrder(package.ID)">
+                        <a href="#" ng-click="openOrder(package.ID)">
                             <div class="single-add-icon"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></div>
                             <div class="single-package-info">
                                {{package.title}}
