--- a/app/partials/single.html
+++ b/app/partials/single.html
@@ -1,35 +1,35 @@
 	
-    <div class="row">
+    <div class="row" ng-show="singleData">
     <div class="col-sm-6 col-sm-offset-1">
-    	<div class="backlink"><a ng-show="catInfo.info.title" ui-sref="cat({funnelID: '{{Slug}}'})"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back to {{catInfo.info.title}} options</a></div>
+    	<div class="backlink"><a ui-sref="cat({funnelID: '{{catID}}'})"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back to {{singleData.catName}} options</a></div>
 
     	<div class="package_options_wrapper">
     		<div class="package_options_header">
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="single_package_container">  
-                            <img src="{{rootPath}}img/items/{{catInfo.subpackages[singleInfo].img}}">
+                            <img src="{{singleData.package_thumb}}">
                         </div><!-- .single_package_container -->
                     </div>
                     <div class="col-sm-7">
-                        <h2>{{catInfo.subpackages[singleInfo].Name}}</h2>
-                        <p>{{catInfo.subpackages[singleInfo].Desc}}</p>
+                        <h2>{{singleData.package.post.post_title}}</h2>
+                        <p>{{singleData.package.post.post_content}}</p>
                     </div>
 
                     <div class="col-sm-2 single_price">
-                        <h2>{{catInfo.subpackages[singleInfo].Price | currency}}</h2>
+                        <h2>{{singleData.package.min_price | currency}}</h2>
                     </div>
                 </div>
     		</div><!-- .package_options_header -->
     		<div class="package_options_list">
                 <h3>Add Package Options</h3>
-    			<ul ng-repeat="package in catInfo.subpackages[singleInfo].Options"> 
+    			<ul ng-repeat="package in singleData.package.bundle_data"> 
     				<li>
                         <a href="#" ng-click="openOrder(package.ID)">
                             <div class="single-add-icon"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></div>
                             <div class="single-package-info">
-                               {{package.title}}
-                                <p>{{package.desc}}</p>
+                               {{package.product_title}}
+                                <p>{{package.product_description}}</p>
                             </div>
                         </a>
                     </li>
@@ -38,4 +38,4 @@
     	</div><!-- .package_options_wrapper -->
     </div>
     </div><!-- .row -->
-    
+<img class="pade-loader" ng-src="{{rootPath}}img/page_loader.svg" ng-show="pageLoad">
