--- a/app/partials/single.html
+++ b/app/partials/single.html
@@ -38,4 +38,5 @@
     	</div><!-- .package_options_wrapper -->
     </div>
     </div><!-- .row -->
+<a href="" ng-click="debugDelete();">debug delete</a>    
 <img class="pade-loader" ng-src="{{rootPath}}img/page_loader.svg" ng-show="pageLoad">
