--- a/app/partials/modals.html
+++ b/app/partials/modals.html
@@ -97,7 +97,7 @@
   					</div>
 				</div>
 				<div class="package-addtocart">
-					<button class="btn btn-primary" ng-click="cartSubmit(packageData.Vendor, packageData.VendorID, singleData.option.product_title, singleData.ID, model.qty, singleData.package.min_price, itemNote);">Add to Cart</button>	
+					<button class="btn btn-primary" ng-click="cartSubmit(singleData.package.id, singleData.package.post.post_excerpt, singleData.option.product_title, singleData.option.product_id, model.qty, singleData.package.min_price, itemNote);">Add to Cart</button>	
 				</div>
     		</div>
     	</div>
