--- a/app/partials/modals.html
+++ b/app/partials/modals.html
@@ -44,6 +44,10 @@
 			    <input type="text" ng-model="signup.lastname" class="form-control" placeholder="Last Name">
 			  </div>
 		</div>
+		<div class="form-group create_co_form">
+			    <label for="createCompany">Company</label>
+			    <input type="text" class="form-control" ng-model="signup.company" id="createCompany" placeholder="Company">
+		</div>
 		<div class="form-group create_email_form">
 			    <label for="createEmail">Email address</label>
 			    <input type="email" class="form-control" ng-model="signup.email" id="createEmail" placeholder="Enter email">
